# B.I.T.E.S

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  platformio.ini
assets/: README.md
docs/: AI_ACCELERATION.md  TECHNICAL_ARCHITECTURE.md  ai_features.md  api_reference.md  architecture.md  hardware.md  sensors.md
examples/: bass_guitar_example.cpp  drums_example.cpp  guitar_example.cpp  keyboard_example.cpp
include/: bits.h
legacy/: Guitar.ino  README.md
src/: config.h  main.cpp
src/ai/: ai_acceleration.cpp  ai_acceleration.h  ai_engine.cpp  ai_engine.h  chord_predictor.cpp  chord_predictor.h  gesture_recognition.cpp  gesture_recognition.h  pattern_learner.cpp  pattern_learner.h  pitch_corrector.cpp  pitch_corrector.h  tempo_detector.cpp  tempo_detector.h
src/audio/: audio_manager.cpp  audio_manager.h  effects_processor.cpp  effects_processor.h  mixer.cpp  mixer.h  sample_manager.cpp  sample_manager.h
src/core/: config_manager.cpp  config_manager.h  event_queue.cpp  event_queue.h  logger.cpp  logger.h  system_manager.cpp  system_manager.h  task_manager.cpp  task_manager.h  watchdog.cpp  watchdog.h
src/instruments/: base_instrument.cpp  base_instrument.h  bass_guitar.cpp  bass_guitar.h  drums.cpp  drums.h  guitar.cpp  guitar.h  keyboard.cpp  keyboard.h
src/network/: bluetooth_manager.cpp  bluetooth_manager.h  mqtt_client.cpp  mqtt_client.h  ota_updater.cpp  ota_updater.h  wifi_manager.cpp  (+1 more)
tests/: test_ai.cpp  test_audio.cpp  test_sensors.cpp
tools/: model_trainer.py  sample_converter.py
(+22 files in other folders)
